k8s/immich/immich.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      volumes:
      - name: zira
        nfs:
          server: 192.168.2.6
          path: /scratch/immich
      containers:
      - name: server
        image: ghcr.io/immich-app/immich-server:release
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 2283
        volumeMounts:
        - name: zira
          mountPath: /usr/src/app/upload

---
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: immich
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
  - name: http
    port: 80
    targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machine-learning
  template:
    metadata:
      labels:
        app: machine-learning
    spec:
      containers:
      - name: machine-learning
        image: ghcr.io/immich-app/immich-machine-learning:release
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 3003
        volumeMounts:
        - name: cache
          mountPath: /cache
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: cache

---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: LoadBalancer
  selector:
    app: machine-learning
  ports:
  - name: api
    port: 3003
    targetPort: api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
spec:
  ingressClassName: nginx
  rules:
    - host: immich.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  http
                port:
                  number: 80
